fix a possible cause of layout shift

--- a/styles/style.css
+++ b/styles/style.css
@@ -126,7 +126,7 @@
   font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 0.835;
-  text-shadow: 4px 4px 0px var(--shadow-color);
+  text-shadow: 4px 4px 0px var(--accent-color);
 }
 
 @media (width >=768px) {
@@ -307,7 +307,7 @@
 /* Advices section */
 
 .advices__title {
-  margin-block-end: 18px;
+  margin-block-end: 20px;
 }
 
 /* Pictures */
@@ -374,7 +374,7 @@
 }
 
 .footer__title {
-  text-shadow: 2px 2px 0 var(--shadow-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
 }
 
 @media (width >=768px) {
