--- a/styles/variables.css
+++ b/styles/variables.css
@@ -14,7 +14,6 @@
   /* Текст */
   --text-color: #f1b2ce;
   --title-color: #db00ff;
-  --shadow-color: #ff0070;
 
   /* Прочее */
   --rec-display: inline;
